# apostol-crm

./: .clang-tidy  .claudeignore  .dockerignore  .env  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  README.ru-RU.md  configure  deploy  docker-clean-none.sh  docker-compose.yml  docker-image-rm.sh  docker-new-database.sh  version.h
.docker/: entrypoint.sh
.docker/conf/: default.conf
.docker/conf/oauth2/: default.json  google.json
.docker/conf/sites/: default.json
.docker/nginx-certbot/: Dockerfile  default.conf  docker-compose.yml  entrypoint.sh  nginx.conf
.docker/nginx-certbot/frontend/: asset-manifest.json  config.js  index.html
.docker/nginx-certbot/frontend/static/js/: 13.823ddbfd.chunk.js  13.823ddbfd.chunk.js.map  14.32d1fc8f.chunk.js  14.32d1fc8f.chunk.js.map  15.972e7695.chunk.js  15.972e7695.chunk.js.map  16.88566139.chunk.js  16.88566139.chunk.js.map  17.470d5e08.chunk.js  17.470d5e08.chunk.js.map  18.471cf607.chunk.js  18.471cf607.chunk.js.map  19.6e0fe026.chunk.js  19.6e0fe026.chunk.js.map  20.65e14131.chunk.js  20.65e14131.chunk.js.map  21.d99cc33a.chunk.js  21.d99cc33a.chunk.js.map  22.3e19a64a.chunk.js  22.3e19a64a.chunk.js.map  25.56ff271d.chunk.js  25.56ff271d.chunk.js.map  26.407988b3.chunk.js  26.407988b3.chunk.js.map  27.b7b474cc.chunk.js  27.b7b474cc.chunk.js.map  28.1c3b4f13.chunk.js  28.1c3b4f13.chunk.js.map  29.7abe0b5f.chunk.js  29.7abe0b5f.chunk.js.map  30.c4841274.chunk.js  30.c4841274.chunk.js.map  31.320ec4c6.chunk.js  31.320ec4c6.chunk.js.map  35.47a04dcc.chunk.js  35.47a04dcc.chunk.js.map  36.0c4fd1f9.chunk.js  36.0c4fd1f9.chunk.js.map  39.62101260.chunk.js  39.62101260.chunk.js.map  (+12 more)
.docker/pgbouncer/: .env  pgbouncer.ini  userlist.txt
.docker/pgweb/: .env
.docker/postgres/: Dockerfile
.docker/postgres/db/: sql
.docker/wireguard/: Dockerfile  postup.sh  wg0.conf
auto/: daemon  unit.service
cmake/: GenerateVersion.cmake
conf/: api.conf  cmail.conf  default.conf  default.json  fcm.conf  file_server.conf  oauth2.conf  pg_http.conf  smtp.conf
conf/oauth2/: default.json  fcm.json  google.json
conf/sites/: default.json
db/: CLAUDE.md  INDEX.md  install.sh  migrate.sh  runme.sh
db/api/: api.yaml  base-api.yaml  oauth2.yaml  platform-api.yaml
db/api/scripts/: audit_descriptions.py  audit_descriptions.sh  extract_openapi.py  generate_openapi.py
db/sql/: .apibot  .env.psql  .passwd.psql  api.psql  create.psql  createdb.psql  database.psql  docker.psql  init.psql  init.sh  install.psql  kernel.psql  kladr.psql  make.psql  patch.psql  preload.psql  sets.conf  sets.psql  update.psql
db/sql/configuration/: INDEX.md  configuration.psql  configuration.sql  create.psql  init.sql  make.psql  patch.psql  update.psql
db/sql/configuration/apostol/: INDEX.md  create.psql  init.sql  oauth2.sql  routine.sql  update.psql
db/sql/configuration/apostol/admin/: INDEX.md  do.sql  update.psql
db/sql/configuration/apostol/api/: INDEX.md  api.sql  callback.sql  create.psql  event.sql  init.sql  update.psql
db/sql/configuration/apostol/confirmation/: INDEX.md  api.sql  init.sql  routine.sql  table.sql  view.sql
db/sql/configuration/apostol/entity/: INDEX.md  init.sql
db/sql/configuration/apostol/exception/: create.psql  init.sql
db/sql/configuration/apostol/observer/: INDEX.md  routine.sql
db/sql/configuration/apostol/patch/: patch.psql
db/sql/configuration/apostol/preload/: create.psql  table.sql
db/sql/configuration/apostol/priority/: INDEX.md  create.psql  init.sql  rest.sql  update.psql
db/sql/configuration/apostol/report/: INDEX.md  create.psql  init.sql  routine.sql  update.psql
db/sql/configuration/aws/: .oauth2.sql  aws.psql  aws.sql  init.sql  update.psql
db/sql/configuration/aws/admin/: api.sql  do.sql
db/sql/configuration/aws/api/: api.psql  api.sql  rest.sql
db/sql/configuration/aws/entity/: entity.sql  update.psql
db/sql/configuration/aws/essence/: essence.psql  essence.sql
db/sql/configuration/aws/stream/: api.sql  db.sql  exception.sql  scheme.sql  sequence.sql  stream.psql
db/sql/configuration/crm/: .oauth2.sql  create.psql  init.sql  routine.sql
db/sql/configuration/crm/admin/: create.psql  do.sql
db/sql/configuration/crm/api/: event.sql  update.psql
db/sql/configuration/crm/entity/: create.psql  init.sql
db/sql/configuration/template/: .oauth2.sql  security.sql  template.psql
db/sql/configuration/template/api/: api.psql  api.sql  current.sql  (+4 more)
db/sql/platform/admin/: api.sql  rest.sql
db/sql/platform/daemon/: daemon.sql
db/sql/platform/kernel/: exception.sql  general.sql  public.sql  scheme.sql  security.sql  users.sql  workflow.sql
db/sql/platform/registry/: api.sql  registry.sql  rest.sql
db/test/: Dockerfile  fixtures.sql  run.sh  setup.sql
db/test/sql/: balance_test.sql  invoice_test.sql  payment_test.sql  subscription_test.sql  yookassa_integration_test.sql
doc/: REST-API-ru.md
docker/: .pgpass  Dockerfile  entrypoint.sh  pg_hba.conf  postgresql.conf
docker/conf/: default.conf  default.json
docker/conf/oauth2/: default.json
docker/conf/sites/: default.json
src/: .gitignore
src/app/: BackEnd.cpp  BackEnd.hpp  Header.hpp  aws.cpp  aws.hpp  crm.cpp  crm.hpp  main.cpp
src/modules/Helpers/: .gitignore  Helpers.hpp
src/modules/Workers/: .gitignore  Workers.hpp
src/modules/Workers/WebService/: WebService.cpp  WebService.hpp
src/processes/: .gitignore  Processes.hpp
www/dashboard/: index.html
www/docs/: api.yaml  oauth2.yaml  platform-api.yaml  swagger-initializer.js
www/error/: 400.html  401.html  404.html  500.html  error.html  index.html
www/error/400/: index.html
www/error/401/: index.html
www/error/404/: index.html
www/error/500/: index.html
www/oauth/: callback.html  error.html  identifier.html  pwd.html  signup.html
www/oauth/callback/: index.html
www/oauth/error/: index.html
www/oauth/identifier/: index.html
www/oauth/pwd/: index.html
www/oauth/signin/: index.html
www/oauth/signup/: index.html
www/sign/: index.html
www/sign/in/: index.html
www/sign/up/: index.html
www/welcome/: index.html
(+448 files in other folders)
